--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Roboto', "Arial", sans-serif;
   font-size: 16px;
   line-height: 24px;
-  font-weight: normal;
+  font-weight: 400;
   color: #283136;
 }
 
@@ -10,7 +10,7 @@ body {
   font-family: 'Roboto', "Arial", sans-serif;
   font-size: 16px;
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 500;
   color: #000000;
   text-transform: uppercase;
 }
@@ -19,7 +19,7 @@ body {
   font-family: 'Roboto', "Arial", sans-serif;
   font-size: 24px;
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
   text-transform: uppercase;
 }
@@ -28,7 +28,7 @@ body {
   font-family: 'Roboto', "Arial", sans-serif;
   font-size: 55px;
   line-height: 55px;
-  font-weight: bold;
+  font-weight: 500;
   color: #000000;
 }
 
@@ -39,7 +39,7 @@ body {
   font-family: 'Roboto', "Arial", sans-serif;
   font-size: 16px;
   line-height: 18px;
-  font-weight: bold;
+  font-weight: 500;
   color: #ffffff;
   text-transform: uppercase;
   text-decoration: none;
@@ -58,7 +58,7 @@ body {
   font-family: 'Roboto', "Arial", sans-serif;
   font-size: 18px;
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
   text-transform: uppercase;
 }
