--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,15 @@
       font-weight: 400;
       color: #283136;
     }
-    /* для наглядности*/
 
     .catalog-item, .catalog-content, .filters, .catalog-title, .clients-logo, .footer-info, .footer-social, .footer, .map-contacts, .footer-map, .slider, .logo, .nav, .user-block, .features-item, .index-content-left, .index-content-right {
       background: rgba(255, 45, 82, 0.2);
     }
+    /* для наглядности
+
 
     .container {
-      border: 1px dotted #3e6dc4;
+      background: rgba(100, 0, 10, 0.2);
     }
     /* для наглядности*/
 
@@ -29,31 +30,37 @@
     .container {
       width: 1160px;
       margin: 0 auto;
-      padding: 0 10px;
+      padding: 0 20px;
+    }
+
+    a {
+      text-decoration: none;
+      color: #000000;
     }
     /* header*/
 
     .main-header {
-      margin-bottom: 80px;
+      background: #eeeeee;
     }
 
     .logo {
       float: left;
-      width: 180px;
-      padding-top: 49px;
-      padding-bottom: 18px;
+      width: 160px;
+      padding-top: 50px;
       margin-right: 20px;
     }
 
-    ul {
+    .nav ul {
       margin: 0;
+      padding: 0;
+      list-style-type: none;
     }
 
     .nav, .user-block {
       float: left;
-      width: 760px;
-      padding-top: 82px;
+      width: 800px;
       margin-right: 20px;
+      padding-top: 82px;
       line-height: 30px;
       font-weight: 500;
       color: #000000;
@@ -63,27 +70,18 @@
 
     .nav li {
       display: inline-block;
-      margin-right: 46px;
+      vertical-align: middle;
+      padding-right: 45px;
+    }
+
+    .nav li:last-child {
+      padding-right: 0;
     }
 
     .user-block {
-      /*    float: right;*/
-      width: 180px;
+      width: 160px;
       margin-right: 0;
-      /*  padding-top: 82px;
-      padding-bottom: 33px;*/
-    }
-    /*поля у h2 ul {
-      margin: 0
-    }*/
-
-    h2 {
-      margin: 0
-    }
-
-    ul {
-      padding: 0;
-      list-style-type: none;
+      text-align: right;
     }
     /* слайдер*/
 
@@ -95,13 +93,27 @@
     .slider-item-design {
       background: url("../img/nerds-index-slide1.png") 100% 100% no-repeat;
       min-height: 431px;
+      margin-bottom: 80px;
     }
 
     .slider-item-title {
+      margin: 0;
+      padding-top: 81px;
       font-size: 55px;
       line-height: 55px;
       font-weight: 500;
       color: #000000;
+    }
+
+    .slider-item-design p {
+      margin: 0;
+      padding-top: 20px;
+      padding-bottom: 40px;
+      font: inherit;
+    }
+
+    .slider .btn {
+      width: 240px;
     }
     /* features*/
 
@@ -116,7 +128,11 @@
     }
 
     .features-item:last-child {
-      margin-right: 0px;
+      margin-right: 0;
+    }
+
+    .features-item-red {
+      padding-bottom: 20px;
     }
 
     .features-name {
@@ -125,6 +141,28 @@
       font-weight: 700;
       color: #000000;
       text-transform: uppercase;
+    }
+
+    .features-item p {
+      margin: 0;
+      padding-top: 25px;
+      padding-bottom: 35px;
+      font: inherit;
+    }
+
+    .btn-red {
+      width: 160px;
+      background: #00ca74;
+    }
+
+    .btn-green {
+      width: 160px;
+      background: #00ca74;
+    }
+
+    .btn-yellow {
+      width: 160px;
+      background: #efc849;
     }
     /* content*/
 
@@ -151,7 +189,6 @@
       display: inline-block;
       width: 24%;
       text-align: center;
-      filter: alpha (opcity=20);
       opacity: 0.2;
     }
 
@@ -192,7 +229,8 @@
 
     .btn {
       display: block;
-      padding: 18px;
+      margin: 0;
+      padding: 16px;
       border-radius: 5px;
       line-height: 18px;
       font-weight: 500;
@@ -201,14 +239,6 @@
       text-transform: uppercase;
       text-decoration: none;
       background: #fb565a;
-    }
-
-    .btn-green {
-      background: #00ca74;
-    }
-
-    .btn-yellow {
-      background: #efc849;
     }
 
     .btn-filter {
@@ -239,13 +269,20 @@
       width: 760px;
     }
 
-    .catalog-item {
-      display: inline-block;
-      width: 360px;
+    .catalog-wrapper {
+      font-size: 0;
     }
 
-    .catalog-item:nth-child(odd) {
-      margin-right: 36px;
+    .catalog-item {
+      display: inline-block;
+      vertical-align: top;
+      width: 360px;
+      margin-right: 40px;
+      font-size: 16px;
+    }
+
+    .catalog-item:nth-child(2n) {
+      margin-right: 0;
     }
 
     .filter-form-title, .catalog-info-title {
