--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,23 @@
-    body {
-      font-family: 'Roboto', "Arial", sans-serif;
-      font-size: 16px;
-      line-height: 24px;
-      font-weight: 400;
-      color: #283136;
-    }
+body {
+  font-family: 'Roboto', "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #283136;
+}
 
-    .catalog-item, .catalog-content, .filters, .catalog-title, .clients-logo, .footer-info, .footer-social, .footer, .map-contacts, .footer-map, .slider, .logo, .nav, .user-block, .features-item, .index-content-left, .index-content-right {
-      background: rgba(255, 45, 82, 0.2);
-    }
-    /* для наглядности
+
+/* для наглядности
+
+.catalog-item, .catalog-content, .filters, .catalog-title, .clients-logo, .footer-info, .footer-social, .footer, .map-contacts, .footer-map, .slider, .logo, .nav, .user-block, .features-item, .index-content-left, .index-content-right {
+  background: rgba(255, 45, 82, 0.2);
+}
+
+.sprite-checkbox-on {
+  width: 27px;
+  height: 23px;
+  background-position: -10px -45px;
+}
 
 
     .container {
@@ -17,297 +25,790 @@
     }
     /* для наглядности*/
 
-    .slider-item-math, .slider-item-worktime {
-      display: none;
-    }
+.slider-item-math, .slider-item-worktime {
+  display: none;
+}
 
-    .clearfix::after {
-      content: "";
-      display: block;
-      clear: both;
-    }
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
 
-    .container {
-      width: 1160px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
+.container {
+  width: 1160px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
 
-    a {
-      text-decoration: none;
-      color: #000000;
-    }
-    /* header*/
+a {
+  text-decoration: none;
+  color: #000000;
+}
 
-    .main-header {
-      background: #eeeeee;
-    }
+img {
+  vertical-align: top;
+  max-width: 100%;
+  height: auto;
+}
 
-    .logo {
-      float: left;
-      width: 160px;
-      padding-top: 50px;
-      margin-right: 20px;
-    }
 
-    .nav ul {
-      margin: 0;
-      padding: 0;
-      list-style-type: none;
-    }
-
-    .nav, .user-block {
-      float: left;
-      width: 800px;
-      margin-right: 20px;
-      padding-top: 82px;
-      line-height: 30px;
-      font-weight: 500;
-      color: #000000;
-      text-transform: uppercase;
-      text-align: center;
-    }
-
-    .nav li {
-      display: inline-block;
-      vertical-align: middle;
-      padding-right: 45px;
-    }
-
-    .nav li:last-child {
-      padding-right: 0;
-    }
-
-    .user-block {
-      width: 160px;
-      margin-right: 0;
-      text-align: right;
-    }
-    /* слайдер*/
-
-    .slider {
-      clear: both;
-      width: 1160px;
-    }
-
-    .slider-item-design {
-      background: url("../img/nerds-index-slide1.png") 100% 100% no-repeat;
-      min-height: 431px;
-      margin-bottom: 80px;
-    }
-
-    .slider-item-title {
-      margin: 0;
-      padding-top: 81px;
-      font-size: 55px;
-      line-height: 55px;
-      font-weight: 500;
-      color: #000000;
-    }
-
-    .slider-item-design p {
-      margin: 0;
-      padding-top: 20px;
-      padding-bottom: 40px;
-      font: inherit;
-    }
-
-    .slider .btn {
-      width: 240px;
-    }
-    /* features*/
-
-    .features {
-      margin-bottom: 80px;
-    }
-
-    .features-item {
-      float: left;
-      width: 360px;
-      margin-right: 40px;
-    }
-
-    .features-item:last-child {
-      margin-right: 0;
-    }
-
-    .features-item-red {
-      padding-bottom: 20px;
-    }
-
-    .features-name {
-      font-size: 24px;
-      line-height: 30px;
-      font-weight: 700;
-      color: #000000;
-      text-transform: uppercase;
-    }
-
-    .features-item p {
-      margin: 0;
-      padding-top: 25px;
-      padding-bottom: 35px;
-      font: inherit;
-    }
-
-    .btn-red {
-      width: 160px;
-      background: #00ca74;
-    }
-
-    .btn-green {
-      width: 160px;
-      background: #00ca74;
-    }
-
-    .btn-yellow {
-      width: 160px;
-      background: #efc849;
-    }
-    /* content*/
-
-    .index-content {
-      margin-bottom: 70px;
-      border-top: 2px solid #f4f4f4;
-    }
-
-    .index-content-left {
-      float: left;
-      width: 760px;
-      padding-top: 75px;
-    }
-
-    .index-content-right {
-      float: right;
-      width: 360;
-      padding-top: 41px;
-    }
-    /* logos*/
-
-    .clients-logo li {
-      list-style-type: none;
-      display: inline-block;
-      width: 24%;
-      text-align: center;
-      opacity: 0.2;
-    }
-
-    .clients-logo {
-      border-top: 2px solid #f4f4f4;
-      border-bottom: 2px solid #f4f4f4;
-    }
-    /* contacts*/
-
-    .map {
-      margin-top: 80px;
-      background: url("../img/map.png") 100% 100% no-repeat;
-      min-height: 416px;
-    }
-
-    .map-contacts {
-      padding: 50px 50px 48px 50px;
-      width: 320px;
-    }
-    /* footer*/
-
-    .footer {}
-
-    .footer-social {
-      float: left;
-      width: 260px;
-      padding-top: 70px;
-      padding-bottom: 70px;
-    }
-
-    .footer-info {
-      float: right;
-      width: 760px;
-      padding-top: 70px;
-      padding-bottom: 70px;
-    }
-    /*стили кнопок*/
-
-    .btn {
-      display: block;
-      margin: 0;
-      padding: 16px;
-      border-radius: 5px;
-      line-height: 18px;
-      font-weight: 500;
-      color: #ffffff;
-      text-align: center;
-      text-transform: uppercase;
-      text-decoration: none;
-      background: #fb565a;
-    }
-
-    .btn-filter {
-      color: #000000;
-      background: #eeeeee;
-    }
-    /*стили каталога*/
-
-    .catalog-header {
-      margin-bottom: 55px;
-      background: #eeeeee;
-    }
-
-    .catalog-title {
-      clear: both;
-      width: ;
-      padding-top: 57px;
-      padding-bottom: 105px;
-    }
-
-    .filters {
-      float: left;
-      width: 260px;
-    }
-
-    .catalog-content {
-      float: right;
-      width: 760px;
-    }
-
-    .catalog-wrapper {
-      font-size: 0;
-    }
-
-    .catalog-item {
-      display: inline-block;
-      vertical-align: top;
-      width: 360px;
-      margin-right: 40px;
-      font-size: 16px;
-    }
-
-    .catalog-item:nth-child(2n) {
-      margin-right: 0;
-    }
-
-    .filter-form-title, .catalog-info-title {
-      font-size: 18px;
-      line-height: 30px;
-      font-weight: 700;
-      color: #000000;
-      text-transform: uppercase;
-    }
-
-    .catalog-info-description {
-      line-height: 18px;
-      color: #666666;
-    }
-    /*
-    border-top: 2px solid #f4f4f4;
-
+/* общая кнопка*/
 
 .btn {
-    display: block;
-    width: 160px;
-    margin: 20px auto;
-    padding: 12px;
-    color: white;
-    background: #34495e;
-    border-radius: 5px;
-    cursor: pointer;
-}*/
+  display: block;
+  margin: 0;
+  padding: 16px 0;
+  border-radius: 5px;
+  font-family: 'Roboto', "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #ffffff;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #fb565a;
+}
+
+.btn:hover {
+  background: #e74246;
+}
+
+.btn:active {
+  color: rgba(255, 255, 255, 0.3);
+  background: #d7373b;
+  box-shadow: inset 0px 3px 0px rgba(0, 0, 0, 0.1);
+}
+
+
+/* header*/
+
+.main-header {
+  background: #eeeeee;
+}
+
+.logo {
+  float: left;
+  width: 160px;
+  padding-top: 50px;
+  padding-bottom: 0;
+  margin-right: 20px;
+}
+
+.logo:hover {
+  opacity: 0.8;
+}
+
+.logo:active {
+  opacity: 0.3;
+}
+
+.main-header a {}
+
+.nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.nav, .user-block {
+  float: left;
+  width: 800px;
+  margin-right: 20px;
+  padding-top: 82px;
+  line-height: 30px;
+  font-weight: 500;
+  color: #000000;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.nav a {
+  padding-bottom: 7px;
+}
+
+.nav a:hover {
+  color: #fb565a;
+}
+
+.nav a:active {
+  color: #000000;
+  opacity: 0.3;
+}
+
+.nav li {
+  display: inline-block;
+  vertical-align: top;
+  padding-right: 44px;
+}
+
+.nav li:last-child {
+  padding-right: 0;
+}
+
+.purchase a {
+  padding-bottom: 7px;
+}
+
+.user-block {
+  max-width: 160px;
+  margin-right: 0;
+  text-align: right;
+}
+
+.purchase {
+  position: relative;
+  display: inline-block;
+  padding-left: 40px;
+  line-height: 30px;
+  font-weight: 500;
+  color: #000000;
+  text-transform: uppercase;
+  vertical-align: top;
+}
+
+.purchase:hover {
+  color: #fb565a;
+}
+
+.purchase:active {
+  color: #000000;
+  opacity: 0.3;
+}
+
+.purchase::before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 0px;
+  width: 15px;
+  height: 15px;
+  background: transparent url("../img/spritesheet.png") no-repeat;
+  background-position: -10px -10px;
+  opacity: 0.3;
+}
+
+
+/* слайдер*/
+
+.slider {
+  clear: both;
+  width: 1160px;
+  margin-bottom: 80px;
+}
+
+.slider-item-design {
+  background: url("../img/nerds-index-slide1.png") 100% 100% no-repeat;
+  min-height: 431px;
+}
+
+.slider-item-math {
+  background: url("../img/nerds-index-slide2.png") 100% 100% no-repeat;
+  min-height: 431px;
+}
+
+.slider-item-worktime {
+  background: url("../img/nerds-index-slide3.png") 100% 100% no-repeat;
+  min-height: 431px;
+}
+
+.slider-item-title, .catalog-title {
+  margin: 0;
+  padding-top: 81px;
+  font-size: 55px;
+  line-height: 55px;
+  font-weight: 500;
+  color: #000000;
+}
+
+.slider-item p {
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  font: inherit;
+}
+
+.slider .btn {
+  width: 240px;
+}
+
+
+/* features*/
+
+.features {
+  margin-bottom: 80px;
+}
+
+.features-item {
+  float: left;
+  width: 360px;
+  margin-right: 40px;
+}
+
+.features-item:last-child {
+  margin-right: 0;
+}
+
+.features-item-red, .features-item-green, .features-item-yellow {
+  padding-bottom: 25px;
+}
+
+.features-name {
+  padding-top: 25px;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.features-item p {
+  margin: 0;
+  padding-top: 25px;
+  padding-bottom: 35px;
+  width: 260px;
+  font: inherit;
+}
+
+.btn-red {
+  width: 160px;
+}
+
+.btn-green {
+  width: 160px;
+  background: #00ca74;
+}
+
+.btn-green:hover {
+  background: #00bc6c;
+}
+
+.btn-green:active {
+  color: rgba(255, 255, 255, 0.3);
+  background: #00aa62;
+}
+
+.btn-yellow {
+  width: 160px;
+  background: #efc849;
+}
+
+.btn-yellow:hover {
+  background: #eab534;
+}
+
+.btn-yellow:active {
+  color: rgba(255, 255, 255, 0.3);
+  background: #e5a722;
+}
+
+
+/*index-content*/
+
+.index-content {
+  margin-bottom: 65px;
+  border-top: 2px solid #f4f4f4;
+}
+
+.index-content-left {
+  float: left;
+  width: 760px;
+  padding-top: 75px;
+}
+
+.index-content-title {
+  margin: 0;
+  font-size: 45px;
+  line-height: 50px;
+  font-weight: 500;
+  color: #000000;
+}
+
+.index-content-left p {
+  margin: 0;
+  padding-top: 30px;
+  padding-bottom: 45px;
+}
+
+.index-list-name {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.index-content-left ul {
+  margin: 0;
+  padding-top: 15px;
+  list-style-type: none;
+  line-height: 48px;
+}
+
+.index-content-right {
+  float: right;
+  width: 360;
+  padding-top: 42px;
+  font-size: 0px;
+}
+
+.index-content-right p {
+  margin: 0;
+}
+
+.index-content-data {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000000;
+  padding-top: 40px;
+  padding-bottom: 30px;
+}
+
+.index-content-right ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.index-content-right li {
+  display: inline-block;
+  vertical-align: top;
+  padding-right: 6px;
+  width: 116px;
+}
+
+.index-content-right li:last-child {
+  padding-right: 0;
+}
+
+.index-content-data-show {
+  font-size: 45px;
+  line-height: 45px;
+  font-weight: 700;
+  padding-bottom: 25px;
+  vertical-align: top;
+}
+
+.sup {
+  vertical-align: super;
+  font-size: 27px;
+}
+
+.index-content-data-description {
+  font-size: 16px;
+  line-height: 18px;
+}
+
+
+/* logos*/
+
+.clients-logo {
+  border-top: 2px solid #f4f4f4;
+  border-bottom: 2px solid #f4f4f4;
+  font-size: 0px;
+  margin-bottom: 65px;
+}
+
+.clients-logo ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.clients-logo li {
+  display: inline-block;
+  width: 25%;
+  text-align: center;
+  opacity: 0.2;
+}
+
+.clients-logo li:hover {
+  opacity: 1;
+}
+
+.clients-logo li:active {
+  opacity: 0.1;
+}
+
+
+/* contacts*/
+
+.map {
+  margin: 0 auto;
+  background: url("../img/map.png") 50% 50% no-repeat;
+  min-height: 416px;
+}
+
+.contacts {
+  padding-top: 54px;
+}
+
+.map-contacts {
+  width: 220px;
+  padding: 50px;
+  background: #ffffff;
+  color: #000000;
+}
+
+.map-contacts-title {
+  margin: 0;
+  padding-bottom: 30px;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.map-contacts-address, .map-contacts-phone {
+  margin: 0;
+  padding-bottom: 16px;
+  line-height: 18px;
+  color: #666666;
+}
+
+.map-contacts-phone {
+  padding-bottom: 35px;
+}
+
+.btn-write-us {
+  width: 220px;
+}
+
+
+/* footer*/
+
+.footer-social {
+  float: left;
+  width: 300px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+.social-btn {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  width: 80px;
+  min-height: 80px;
+  border-radius: 40px;
+  margin-right: 14px;
+  font-size: 0;
+  background: #e1e1e1;
+}
+
+.social-btn::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: transparent url("../img/spritesheet.png") no-repeat;
+}
+
+.social-btn-vk::before {
+  width: 26px;
+  height: 15px;
+  background-position: -10px -171px;
+}
+
+.social-btn-fb::before {
+  width: 12px;
+  height: 22px;
+  background-position: -10px -88px;
+}
+
+.social-btn-inst::before {
+  width: 21px;
+  height: 21px;
+  background-position: -10px -130px;
+}
+
+.social-btn:hover {
+  background: #e74246;
+}
+
+.social-btn:active {
+  background: #d7373b;
+  box-shadow: inset 0px 3px 0px rgba(0, 0, 0, 0.1);
+}
+
+.social-btn:active::before {
+  opacity: 0.3;
+}
+
+.footer-info {
+  float: right;
+  width: 760px;
+  padding-top: 75px;
+}
+
+.footer-info-title {
+  margin: 0;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+  color: #000000;
+  padding-bottom: 8px;
+}
+
+.footer-info-description {
+  margin: 0;
+  line-height: 22px;
+  color: #444444;
+}
+
+
+/*каталог*/
+
+.active {
+  border-bottom: #fb565a solid 2px;
+}
+
+.catalog-header {
+  margin-bottom: 55px;
+  background: #eeeeee;
+}
+
+.catalog-title {
+  clear: both;
+  padding-top: 57px;
+  padding-bottom: 105px;
+  text-align: center;
+}
+
+.filters {
+  float: left;
+  width: 260px;
+}
+
+.btn-filter {
+  color: #000000;
+  background: #eeeeee;
+}
+
+.catalog-content {
+  float: right;
+  width: 760px;
+}
+
+.catalog-wrapper {
+  font-size: 0;
+}
+
+.catalog-item {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  width: 360px;
+  margin-right: 36px;
+  margin-bottom: 36px;
+  font-size: 16px;
+  border: rgba(77, 77, 77, 0.1) solid 1px;
+  border-radius: 5px 5px 0 0;
+  outline-offset: -1px;
+  background: rgba(77, 77, 77, 0.1);
+}
+
+.catalog-item:nth-child(2n) {
+  margin-right: 0;
+}
+
+
+/* всплывающая подпись элемента каталога */
+
+.catalog-item .catalog-info {
+  box-sizing: border-box;
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  left: 0;
+  width: 360px;
+  padding: 30px 60px 40px 60px;
+  background: #eeeeee;
+}
+
+.catalog-item .catalog-info {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.catalog-item:hover .catalog-info {
+  opacity: 1;
+  visibility: visible;
+}
+
+.catalog-item:hover {
+  border: rgba(77, 77, 77, 0.1) solid 1px;
+  background: rgba(77, 77, 77, 1);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
+}
+
+.catalog-info-title {
+  margin: 0;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.catalog-info-description {
+  margin: 0;
+  padding: 18px 0 28px 0;
+  line-height: 18px;
+  color: #666666;
+}
+
+
+/* браузер элементов каталога */
+
+.catalog-item-header {
+  position: relative;
+  width: 360px;
+  height: 40px;
+}
+
+.catalog-item-header span::before {
+  content: "";
+  position: absolute;
+  top: 13px;
+  left: 16px;
+  width: 14px;
+  height: 14px;
+  border-radius: 8px;
+  background: #ffffff;
+  opacity: 0.5;
+}
+
+.btn-catalog-info {
+  margin-left: 20px;
+  width: 200px;
+}
+
+
+/* фильтр стоимость */
+
+.filter-title {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.range-filter {
+  width: 260px;
+  margin: 50px 0;
+}
+
+.range-controls {
+  position: relative;
+  height: 41px;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  background: #f1f1f1;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: #d7dcde;
+}
+
+.range-controls .bar {
+  width: 70%;
+  height: 2px;
+  background: #00ca74;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 30px;
+  left: 0px;
+  width: 4px;
+  height: 4px;
+  cursor: pointer;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  background: #ababab;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+}
+
+.range-controls .toggle-min {
+  left: 50px;
+}
+
+.range-controls .toggle-max {
+  left: 110px;
+}
+
+.price-controls {
+  font-size: 0;
+}
+
+.price-controls label {
+  font-size: 16px;
+  display: inline-block;
+  width: 50%;
+}
+
+.max-price {
+  text-align: right;
+}
+
+.price-controls input {
+  font-family: 'Roboto', 'Arial', sans-serif;
+  font-size: 16px;
+  width: 60px;
+  margin-left: 10px;
+  padding: 8px 10px;
+  text-align: center;
+  color: #283136;
+  border: none;
+  border-radius: 5px;
+  background: #f1f1f1;
+}
+
+
+/* фильтры */
+
+.filter-form-title {
+  margin: 0;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+
+/* сортировка */
+
+.sort ul {
+  text-align: left;
+  margin: 0;
+  padding: 0;
+}
+
+.sort li {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 25px 0 0;
+  font-size: 14px;
+  font-weight: 400;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.sort li:first-child {
+  margin: 0 266px 0 0;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+}
