--- a/css/style.css
+++ b/css/style.css
@@ -133,8 +133,7 @@ img {
 }
 
 .nav a:active {
-  color: #000000;
-  opacity: 0.3;
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .nav li {
@@ -173,8 +172,7 @@ img {
 }
 
 .purchase:active {
-  color: #000000;
-  opacity: 0.3;
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .purchase::before {
@@ -193,24 +191,83 @@ img {
 /* слайдер*/
 
 .slider {
+  position: relative;
   clear: both;
   width: 1160px;
+  min-height: 431px;
   margin-bottom: 80px;
 }
 
-.slider-item-design {
+.slider input[type=radio] {
+  position: absolute;
+  opacity: 0;
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 95px;
+  left: 50%;
+  width: 200px;
+  height: 10px;
+  margin-left: -100px;
+  text-align: center;
+  z-index: 1000;
+}
+
+.slider-controls label {
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+  margin: 0 3px;
+  background: white;
+  border: 3px solid white;
+  vertical-align: top;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+#btn-1:checked~.slider-controls label[for="btn-1"], #btn-2:checked~.slider-controls label[for="btn-2"], #btn-3:checked~.slider-controls label[for="btn-3"] {
+  background: #c1c1c1;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.slide {
+  display: none;
+}
+
+.slide:nth-child(1) {
   background: url("../img/nerds-index-slide1.png") 100% 100% no-repeat;
   min-height: 431px;
 }
 
-.slider-item-math {
+.slide:nth-child(2) {
   background: url("../img/nerds-index-slide2.png") 100% 100% no-repeat;
   min-height: 431px;
 }
 
-.slider-item-worktime {
+.slide:nth-child(3) {
   background: url("../img/nerds-index-slide3.png") 100% 100% no-repeat;
   min-height: 431px;
+}
+
+#btn-1:checked~.slides .slide:nth-child(1) {
+  display: block;
+}
+
+#btn-2:checked~.slides .slide:nth-child(2) {
+  display: block;
+}
+
+#btn-3:checked~.slides .slide:nth-child(3) {
+  display: block;
 }
 
 .slider-item-title, .catalog-title {
@@ -222,7 +279,7 @@ img {
   color: #000000;
 }
 
-.slider-item p {
+.slider-item {
   margin: 0;
   padding-top: 20px;
   padding-bottom: 40px;
@@ -471,10 +528,6 @@ img {
   padding-bottom: 35px;
 }
 
-.btn-write-us {
-  width: 220px;
-}
-
 
 /* footer*/
 
@@ -616,9 +669,34 @@ img {
 }
 
 
+/* браузер элементов каталога */
+
+.catalog-item-header {
+  width: 344px;
+  height: 40px;
+  text-align: left;
+  margin-left: 16px;
+}
+
+.catalog-item-header span {
+  display: inline-block;
+  margin-top: 13px;
+  margin-right: 9px;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background: #ffffff;
+}
+
+.btn-catalog-info {
+  margin-left: 20px;
+  width: 200px;
+}
+
+
 /* всплывающая подпись элемента каталога */
 
-.catalog-item .catalog-info {
+.catalog-info {
   box-sizing: border-box;
   position: absolute;
   z-index: 2;
@@ -659,32 +737,6 @@ img {
   padding: 18px 0 28px 0;
   line-height: 18px;
   color: #666666;
-}
-
-
-/* браузер элементов каталога */
-
-.catalog-item-header {
-  position: relative;
-  width: 360px;
-  height: 40px;
-}
-
-.catalog-item-header span::before {
-  content: "";
-  position: absolute;
-  top: 13px;
-  left: 16px;
-  width: 14px;
-  height: 14px;
-  border-radius: 8px;
-  background: #ffffff;
-  opacity: 0.5;
-}
-
-.btn-catalog-info {
-  margin-left: 20px;
-  width: 200px;
 }
 
 
@@ -811,4 +863,110 @@ img {
   font-weight: 700;
   color: #000000;
   text-transform: uppercase;
+}
+
+.modal-write-us {
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  width: 760px;
+  margin-left: -480px;
+  padding: 68px 100px 85px 100px;
+  color: #000000;
+  background: #eeeeee;
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+}
+
+.modal-write-us-close {
+  position: absolute;
+  top: 78px;
+  right: 90px;
+  width: 21px;
+  height: 21px;
+  font-size: 0;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  opacity: 0.3;
+}
+
+.modal-write-us-close::before, .modal-write-us-close::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: -2px;
+  width: 25px;
+  height: 5px;
+  background-color: #fb565a;
+}
+
+.modal-write-us-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-write-us-close::after {
+  transform: rotate(-45deg);
+}
+
+.modal-write-us-title {
+  margin: 0;
+  font-size: 45px;
+  line-height: 45px;
+  color: #000000;
+}
+
+.write-us-form {
+  margin-top: 45px;
+}
+
+.write-us-form input[type="text"], .write-us-form textarea[name="post"] {
+  float: left;
+  width: 326px;
+  margin: 0;
+  margin-top: 10px;
+  margin-bottom: 35px;
+  padding: 15px 15px;
+  border: #d7dcde solid 2px;
+  border-radius: 5px;
+  font-size: 16px;
+  line-height: 18px;
+  font-family: "Roboto", "Arial", sans-serif;
+  color: #444444;
+}
+
+.write-us-form textarea[name="post"] {
+  clear: both;
+  width: 726px;
+  margin-bottom: 47px;
+}
+
+.write-us-form input[type="text"]:hover {
+  border: #b4b9bb solid 2px;
+}
+
+.write-us-form input[type="text"]:focus {
+  border: #000000 solid 2px;
+}
+
+.write-us-form textarea[name="post"]:hover {
+  border: #b4b9bb solid 2px;
+}
+
+.write-us-form textarea[name="post"]:hover {
+  border: #000000 solid 2px;
+}
+
+.write-us-form p {
+  margin: 0;
+  font-size: 16px;
+  line-height: 18px;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-weight: 700;
+  color: #000000;
+}
+
+.btn-write-us-form {
+  font: inherit;
+  width: 260px;
+  border: none;
 }
