--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   line-height: 24px;
   font-weight: 400;
   color: #283136;
+  background: white;
 }
 
 
@@ -11,12 +12,6 @@ body {
 
 .catalog-item, .catalog-content, .filters, .catalog-title, .clients-logo, .footer-info, .footer-social, .footer, .map-contacts, .footer-map, .slider, .logo, .nav, .user-block, .features-item, .index-content-left, .index-content-right {
   background: rgba(255, 45, 82, 0.2);
-}
-
-.sprite-checkbox-on {
-  width: 27px;
-  height: 23px;
-  background-position: -10px -45px;
 }
 
 
@@ -78,7 +73,7 @@ img {
 .btn:active {
   color: rgba(255, 255, 255, 0.3);
   background: #d7373b;
-  box-shadow: inset 0px 3px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.1);
 }
 
 
@@ -103,8 +98,6 @@ img {
 .logo:active {
   opacity: 0.3;
 }
-
-.main-header a {}
 
 .nav ul {
   margin: 0;
@@ -182,7 +175,7 @@ img {
   left: 0px;
   width: 15px;
   height: 15px;
-  background: transparent url("../img/spritesheet.png") no-repeat;
+  background: transparent url("../img/spritesheet.png") -10px -10px no-repeat;
   background-position: -10px -10px;
   opacity: 0.3;
 }
@@ -211,24 +204,45 @@ img {
   height: 10px;
   margin-left: -100px;
   text-align: center;
-  z-index: 1000;
+  z-index: 2;
 }
 
 .slider-controls label {
+  position: relative;
   display: inline-block;
-  width: 4px;
-  height: 4px;
-  margin: 0 3px;
+  width: 18px;
+  height: 18px;
+  margin: 0 8px;
   background: white;
-  border: 3px solid white;
-  vertical-align: top;
+  vertical-align: middle;
   border-radius: 50%;
   cursor: pointer;
 }
 
 #btn-1:checked~.slider-controls label[for="btn-1"], #btn-2:checked~.slider-controls label[for="btn-2"], #btn-3:checked~.slider-controls label[for="btn-3"] {
-  background: #c1c1c1;
+  margin: 0 13px;
+  box-shadow: 0 0 0 5px white;
+  width: 4px;
+  height: 4px;
+  border: 2px solid #c1c1c1;
+  background: white;
 }
+
+
+/*#btn-1:checked~.slider-controls label[for="btn-1"],
+#btn-2:checked~.slider-controls label[for="btn-2"],
+#btn-3:checked~.slider-controls label[for="btn-3"]::before {
+  position: absolute;
+  content: "";
+  width: 4px;
+  height: 4px;
+  left: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 2px solid #c1c1c1;
+  border-radius: 50%;
+  background: white;
+}*/
 
 .slide {
   position: absolute;
@@ -396,13 +410,29 @@ img {
 .index-content-left ul {
   margin: 0;
   padding-top: 15px;
+  padding-left: 35px;
   list-style-type: none;
   line-height: 48px;
 }
 
+.index-content-left li {
+  position: relative;
+}
+
+.index-content-left li::before {
+  position: absolute;
+  content: "";
+  width: 25px;
+  height: 2px;
+  left: -35px;
+  top: 15px;
+  transform: translateY(-50%);
+  background: #fb565a;
+}
+
 .index-content-right {
   float: right;
-  width: 360;
+  width: 360px;
   padding-top: 42px;
   font-size: 0px;
 }
@@ -431,8 +461,7 @@ img {
 .index-content-right li {
   display: inline-block;
   vertical-align: top;
-  padding-right: 6px;
-  width: 116px;
+  width: 120px;
 }
 
 .index-content-right li:last-child {
@@ -474,14 +503,54 @@ img {
 }
 
 .clients-logo li {
+  position: relative;
   display: inline-block;
+  vertical-align: middle;
   width: 25%;
   text-align: center;
   opacity: 0.2;
 }
 
+.clients-logo li:not(first-child)::before {
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 52px;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #000000;
+}
+
+
+/*.clients-logo li:nth-child(2n+0)::before {
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 52px;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #000000;
+}
+
+.clients-logo li:nth-child(3)::before {
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 52px;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #000000;
+}*/
+
 .clients-logo li:hover {
   opacity: 1;
+}
+
+.clients-logo li:hover::before {
+  opacity: 0.2;
 }
 
 .clients-logo li:active {
@@ -544,7 +613,7 @@ img {
   vertical-align: top;
   width: 80px;
   min-height: 80px;
-  border-radius: 40px;
+  border-radius: 50%;
   margin-right: 14px;
   font-size: 0;
   background: #e1e1e1;
@@ -562,19 +631,19 @@ img {
 .social-btn-vk::before {
   width: 26px;
   height: 15px;
-  background-position: -10px -171px;
+  background-position: -10px -304px;
 }
 
 .social-btn-fb::before {
   width: 12px;
   height: 22px;
-  background-position: -10px -88px;
+  background-position: -10px -131px;
 }
 
 .social-btn-inst::before {
   width: 21px;
   height: 21px;
-  background-position: -10px -130px;
+  background-position: -10px -173px;
 }
 
 .social-btn:hover {
@@ -630,16 +699,6 @@ img {
   text-align: center;
 }
 
-.filters {
-  float: left;
-  width: 260px;
-}
-
-.btn-filter {
-  color: #000000;
-  background: #eeeeee;
-}
-
 .catalog-content {
   float: right;
   width: 760px;
@@ -658,25 +717,32 @@ img {
   margin-right: 36px;
   margin-bottom: 36px;
   font-size: 16px;
-  border: rgba(77, 77, 77, 0.1) solid 1px;
   border-radius: 5px 5px 0 0;
-  outline-offset: -1px;
-  background: rgba(77, 77, 77, 0.1);
+  border: rgba(77, 77, 77, 0.1) 1px solid;
 }
 
 .catalog-item:nth-child(2n) {
   margin-right: 0;
 }
 
-
-/* браузер элементов каталога */
+.catalog-item:hover {
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);
+}
 
 .catalog-item-header {
-  width: 344px;
+  width: 360px;
   height: 40px;
   text-align: left;
-  margin-left: 16px;
+  border-radius: 5px 5px 0 0;
+  background: rgba(77, 77, 77, 0.1);
 }
+
+.catalog-item:hover .catalog-item-header {
+  background: rgba(77, 77, 77, 1);
+}
+
+
+/* браузер элементов каталога */
 
 .catalog-item-header span {
   display: inline-block;
@@ -686,6 +752,10 @@ img {
   height: 14px;
   border-radius: 50%;
   background: #ffffff;
+}
+
+.catalog-item-header span:first-child {
+  margin-left: 16px;
 }
 
 .btn-catalog-info {
@@ -717,12 +787,6 @@ img {
   visibility: visible;
 }
 
-.catalog-item:hover {
-  border: rgba(77, 77, 77, 0.1) solid 1px;
-  background: rgba(77, 77, 77, 1);
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
-}
-
 .catalog-info-title {
   margin: 0;
   font-size: 18px;
@@ -740,15 +804,118 @@ img {
 }
 
 
-/* фильтр стоимость */
+/* фильтры */
 
-.filter-title {
-  font-size: 18px;
-  line-height: 30px;
-  font-weight: 700;
-  color: #000000;
-  text-transform: uppercase;
+.filters {
+  float: left;
+  width: 260px;
 }
+
+.filter-list {
+  margin: 0;
+  margin-bottom: 50px;
+  padding: 0;
+  list-style: none;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+input[type="radio"]+label {
+  position: relative;
+  display: block;
+  margin: 16px 0;
+  line-height: 23px;
+  padding-left: 35px;
+  cursor: pointer;
+  color: #283136;
+}
+
+input[type="radio"]+label::before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: 0;
+  left: 0;
+  background: white url("../img/spritesheet.png") -10px -10px no-repeat;
+  background-position: -10px -214px;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+input[type="radio"]+label:hover::before {
+  opacity: 1;
+}
+
+input[type="radio"]:checked+label::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: 0;
+  left: 0;
+  background: white url("../img/spritesheet.png") -10px -10px no-repeat;
+  background-position: -10px -259px;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+input[type="radio"]:checked+label:hover::after {
+  opacity: 1;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+input[type="checkbox"]+label {
+  position: relative;
+  display: block;
+  margin: 16px 0;
+  line-height: 23px;
+  padding-left: 35px;
+  cursor: pointer;
+  color: #283136;
+}
+
+input[type="checkbox"]+label::before {
+  content: "";
+  position: absolute;
+  width: 27px;
+  height: 23px;
+  top: 0;
+  left: 0;
+  background: white url("../img/spritesheet.png") -10px -10px no-repeat;
+  background-position: -10px -45px;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+input[type="checkbox"]+label:hover::before {
+  opacity: 1;
+}
+
+input[type="checkbox"]:checked+label::after {
+  content: "";
+  position: absolute;
+  width: 27px;
+  height: 23px;
+  top: 0;
+  left: 0;
+  background: white url("../img/spritesheet.png") -10px -10px no-repeat;
+  background-position: -10px -88px;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+input[type="checkbox"]:checked+label:hover::after {
+  opacity: 1;
+}
+
+
+/* фильтр стоимость */
 
 .range-filter {
   width: 260px;
@@ -837,27 +1004,38 @@ img {
   text-transform: uppercase;
 }
 
+.btn-filter {
+  color: #000000;
+  background: #eeeeee;
+  width: 260px;
+  border: none;
+}
+
+.btn-filter:hover {
+  background: #dfdfdf;
+}
+
+.btn-filter:active {
+  color: rgba(0, 0, 0, 0.3);
+  background: #d5d5d5;
+  box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.1);
+}
+
 
 /* сортировка */
 
+.sort {
+  margin-bottom: 50px;
+}
+
 .sort ul {
-  text-align: left;
   margin: 0;
   padding: 0;
 }
 
-.sort li {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0 25px 0 0;
-  font-size: 14px;
-  font-weight: 400;
-  color: #000000;
-  text-transform: uppercase;
-}
-
-.sort li:first-child {
-  margin: 0 266px 0 0;
+.sort-parametr-title {
+  float: left;
+  margin: 0;
   font-size: 18px;
   line-height: 30px;
   font-weight: 700;
@@ -865,16 +1043,119 @@ img {
   text-transform: uppercase;
 }
 
+.sort-parametr li {
+  float: right;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 25px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 30px;
+  color: #000000;
+  opacity: 0.3;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.sort-parametr li:hover {
+  opacity: 0.6;
+}
+
+.sort-parametr li:active {
+  opacity: 1;
+}
+
+.sort-parametr .sort-active {
+  opacity: 1;
+}
+
+.sort-parametr li:last-child {
+  margin-left: 20px;
+}
+
+.sort-marker-up {
+  display: inline-block;
+  vertical-align: middle;
+  width: 0;
+  height: 0;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 8px solid #000000;
+}
+
+.sort-marker-down {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 25px;
+  width: 0;
+  height: 0;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top: 8px solid #000000;
+}
+
+.pagination ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.pagination li {
+  display: inline-block;
+  vertical-align: top;
+  margin: 24px 12px 60px 0;
+  padding: 13px 0;
+  width: 50px;
+  border-radius: 5px;
+  font-weight: 500;
+  text-align: center;
+  text-transform: uppercase;
+  background: #eeeeee;
+  cursor: pointer;
+}
+
+.pagination li:last-child {
+  width: 260px;
+}
+
+.pagination li:hover {
+  background: #dfdfdf;
+}
+
+.pagination li:active {
+  background: #d5d5d5;
+  box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+.pagination .pagination-active {
+  width: 44px;
+  padding: 10px 0;
+  border: #dbdbdb 3px solid;
+  background: white;
+}
+
+.pagination li a {
+  color: #000000;
+}
+
+.pagination li:active a {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+
+/* модальное окно*/
+
 .modal-write-us {
-  position: absolute;
-  top: 100px;
+  display: none;
+  position: fixed;
+  bottom: 175px;
   left: 50%;
   width: 760px;
   margin-left: -480px;
   padding: 68px 100px 85px 100px;
   color: #000000;
-  background: #eeeeee;
-  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+  background: white;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.75);
 }
 
 .modal-write-us-close {
@@ -919,10 +1200,18 @@ img {
   margin-top: 45px;
 }
 
+.write-us-form label {
+  display: inline-block;
+  vertical-align: top;
+  width: 360px;
+}
+
+.write-us-form label:first-child {
+  margin-right: 36px;
+}
+
 .write-us-form input[type="text"], .write-us-form textarea[name="post"] {
-  float: left;
   width: 326px;
-  margin: 0;
   margin-top: 10px;
   margin-bottom: 35px;
   padding: 15px 15px;
@@ -935,7 +1224,6 @@ img {
 }
 
 .write-us-form textarea[name="post"] {
-  clear: both;
   width: 726px;
   margin-bottom: 47px;
 }
@@ -956,7 +1244,7 @@ img {
   border: #000000 solid 2px;
 }
 
-.write-us-form p {
+.write-us-form span {
   margin: 0;
   font-size: 16px;
   line-height: 18px;
