--- a/css/style.css
+++ b/css/style.css
@@ -215,22 +215,6 @@ img {
   background: white;
 }
 
-
-/*#btn-1:checked~.slider-controls label[for="btn-1"],
-#btn-2:checked~.slider-controls label[for="btn-2"],
-#btn-3:checked~.slider-controls label[for="btn-3"]::before {
-  position: absolute;
-  content: "";
-  width: 4px;
-  height: 4px;
-  left: 5px;
-  top: 50%;
-  transform: translateY(-50%);
-  border: 2px solid #c1c1c1;
-  border-radius: 50%;
-  background: white;
-}*/
-
 .slide {
   position: absolute;
   top: 0;
@@ -241,7 +225,7 @@ img {
 }
 
 .slide {
-  display: none;
+  visibility: hidden;
 }
 
 .slide:nth-child(1) {
@@ -260,15 +244,15 @@ img {
 }
 
 #btn-1:checked~.slides .slide:nth-child(1) {
-  display: block;
+  visibility: visible;
 }
 
 #btn-2:checked~.slides .slide:nth-child(2) {
-  display: block;
+  visibility: visible;
 }
 
 #btn-3:checked~.slides .slide:nth-child(3) {
-  display: block;
+  visibility: visible;
 }
 
 .slider-item-title, .catalog-title {
@@ -497,66 +481,59 @@ img {
   opacity: 0.2;
 }
 
-.clients-logo li:not(first-child)::before {
-  position: absolute;
-  content: "";
-  width: 2px;
-  height: 52px;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  background: #000000;
-}
-
-
-/*.clients-logo li:nth-child(2n+0)::before {
-  position: absolute;
-  content: "";
-  width: 2px;
-  height: 52px;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  background: #000000;
-}
-
-.clients-logo li:nth-child(3)::before {
-  position: absolute;
-  content: "";
-  width: 2px;
-  height: 52px;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  background: #000000;
-}*/
-
 .clients-logo li:hover {
   opacity: 1;
-}
-
-.clients-logo li:hover::before {
-  opacity: 0.2;
 }
 
 .clients-logo li:active {
   opacity: 0.1;
 }
 
+.clients-logo li:not(:first-child)::before {
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 52px;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #000000;
+}
+
+.clients-logo li:hover::before {
+  opacity: 0.2;
+}
+
+.clients-logo li:active::before {
+  opacity: 1;
+}
+
 
 /* contacts*/
 
 .map {
+  position: relative;
   margin: 0 auto;
   background: url("../img/map.png") 50% 50% no-repeat;
   min-height: 416px;
 }
 
-.contacts {
-  padding-top: 54px;
+.map .container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.map-wrapper {
+  width: 100%;
+  height: 416px;
 }
 
 .map-contacts {
+  position: absolute;
+  z-index: 5;
+  top: 54px;
   width: 220px;
   padding: 50px;
   background: #ffffff;
@@ -811,6 +788,7 @@ input[type="radio"] {
 input[type="radio"]+label {
   position: relative;
   display: block;
+  margin: 0;
   margin: 12px 0;
   line-height: 28px;
   padding-left: 35px;
@@ -835,7 +813,7 @@ input[type="radio"]+label:hover::before {
   opacity: 1;
 }
 
-input[type="radio"]:checked+label::after {
+input[type="radio"]:checked+label::before {
   content: "";
   position: absolute;
   width: 25px;
@@ -848,7 +826,11 @@ input[type="radio"]:checked+label::after {
   cursor: pointer;
 }
 
-input[type="radio"]:checked+label:hover::after {
+input[type="radio"]:checked+label:hover {
+  color: #000000;
+}
+
+input[type="radio"]:checked+label:hover::before {
   opacity: 1;
 }
 
@@ -883,7 +865,7 @@ input[type="checkbox"]+label:hover::before {
   opacity: 1;
 }
 
-input[type="checkbox"]:checked+label::after {
+input[type="checkbox"]:checked+label::before {
   content: "";
   position: absolute;
   width: 27px;
@@ -896,7 +878,11 @@ input[type="checkbox"]:checked+label::after {
   cursor: pointer;
 }
 
-input[type="checkbox"]:checked+label:hover::after {
+input[type="checkbox"]:checked+label:hover {
+  color: #000000;
+}
+
+input[type="checkbox"]:checked+label:hover::before {
   opacity: 1;
 }
 
